--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <li><a href="3.html">JavaScript</a></li>
 </ol>
 
-<h2>WEB</h2>
+<h2>WEB WEB</h2>
 <p>This is the content for the WEB</p>
 
 <body>
